pub struct ConfirmationHeightBounded {}

impl ConfirmationHeightBounded {
    pub fn new() -> Self {
        Self {}
    }
}
