@startuml "Confirmation Height"
class ConfirmationHeightUnbounded {
    process(block)
}

class ConfirmationHeightBounded{
    process(block)
}

class ConfirmationHeightProcessor{
    add(block)
    run(mode)
}
class Ledger
class Stat
class WriteDatabaseQueue
class Logging
class Logger

enum ConfirmationHeightMode{
    Autmatic
    Unbounded
    Bounded
}

ConfirmationHeightUnbounded --> Ledger
ConfirmationHeightUnbounded --> Stat
ConfirmationHeightUnbounded --> WriteDatabaseQueue
ConfirmationHeightUnbounded --> Logging
ConfirmationHeightUnbounded --> Logger

ConfirmationHeightBounded --> Ledger
ConfirmationHeightBounded --> WriteDatabaseQueue
ConfirmationHeightBounded --> Logging
ConfirmationHeightBounded --> Logger

ConfirmationHeightProcessor --> ConfirmationHeightBounded
ConfirmationHeightProcessor --> ConfirmationHeightUnbounded
ConfirmationHeightProcessor --> ConfirmationHeightMode
ConfirmationHeightProcessor --> Ledger
ConfirmationHeightProcessor --> WriteDatabaseQueue

@enduml